--- a/src/sass/features/navbars/_i_nav.scss
+++ b/src/sass/features/navbars/_i_nav.scss
@@ -127,4 +127,46 @@ __________________________________________________________________*/
             }
         }
     }  
+    
+    /* helpers
+    ------------------------------------------------------------*/
+    
+    @if $navbar-t-fixed {
+
+        &.t-fixed { //fixed on top
+
+            @extend .fixed ;
+            top: 0px ;
+            left: 0px ;
+            width: 100% ;
+            z-index: $global-z-index ;
+        } 
+    } 
+    
+    @if $navbar-b-fixed {
+        
+        &.b-fixed { //fixed on bottom
+
+            @extend .fixed ;
+            bottom: 0px ;
+            left: 0px ;
+            width: 100% ;
+            border: none ;
+            border-top: 1px solid $border-color ;
+            z-index: $global-z-index ;
+
+            >ul li >ul {
+
+                top: auto ;
+                bottom: $navbar-dsm-position ;
+                box-shadow: 0px -3px 3px $shadow-color ;
+
+                li ul {
+
+                    top: auto ;
+                    bottom: 0em ;
+                }
+            }
+        }
+    }
 }
