new codes restructuration

--- a/src/sass/iui.scss
+++ b/src/sass/iui.scss
@@ -11,13 +11,18 @@
 @import 'features/navbars/i_nav.scss' ;
 @import 'features/navbars/mi_bar.scss' ;
 @import 'features/navbars/mi_style.scss' ;
-@import 'features/navbars/bg_style.scss' ;
-@import 'features/navbars/bor_style.scss' ;
+@import 'features/navbars/bg_look.scss' ;
+@import 'features/navbars/border_look.scss' ;
 
-@import 'features/forms.scss' ;
-@import 'features/collections.scss' ;
-@import 'features/tables.scss' ;
+@import 'features/forms/i_form.scss' ;
+@import 'features/forms/mi_style.scss' ;
+
+@import 'features/collections/i_block.scss' ;
+@import 'features/collections/collection.scss' ;
+@import 'features/collections/tables.scss' ;
+
 @import 'features/grids.scss' ;
+
 @import 'features/extras/shadow_styles.scss' ;
 @import 'features/extras/radius_styles.scss' ;
 
