--- a/src/sass/features/collections/_collection.scss
+++ b/src/sass/features/collections/_collection.scss
@@ -3,7 +3,7 @@
 _____________________________________________________________________________________________*/
 
 
-.i-block.collection { //with few structure tags.
+.i-collection { //with few structure tags.
 
     >h1, >h2, >h3, >h4, >h5, >h6 {
 
@@ -81,7 +81,7 @@ ________________________________________________________________________________
     }
 }
 
-ul.i-block.collection {
+ul.i-collection {
 
     >h1, >h2, >h3, >h4, >h5, >h6 {
 
