--- a/src/sass/iui.scss
+++ b/src/sass/iui.scss
@@ -8,16 +8,16 @@
 
 @import 'features/helpers.scss' ;
 
-@import 'features/navbars/i_nav.scss' ;
+@import 'features/navbars/navbar.scss' ;
 @import 'features/navbars/mi_bar.scss' ;
 @import 'features/navbars/mi_style.scss' ;
 @import 'features/navbars/bg_look.scss' ;
 @import 'features/navbars/border_look.scss' ;
 
-@import 'features/forms/i_form.scss' ;
+@import 'features/forms/form.scss' ;
 @import 'features/forms/mi_style.scss' ;
 
-@import 'features/collections/i_block.scss' ;
+@import 'features/collections/block.scss' ;
 @import 'features/collections/collection.scss' ;
 @import 'features/collections/tables.scss' ;
 
