--- a/src/sass/features/_helpers.scss
+++ b/src/sass/features/_helpers.scss
@@ -4,7 +4,7 @@ __________________________________________________________________________
 
 * @NOTE definitions here are for global purpose; however there can be a paticular style's definitions associated to other feature.
 * For an example with `.unfocusable` option, here is the global style, but for navbar items, 
-*there is additionnal's defintion set by `.i-nav >ul li.unfocusable` on the considered source file.
+*there is additionnal's defintion set by `.navbar >ul li.unfocusable` on the considered source file.
 */
 
 //genarate display class syntax for elements (disable display or visibility) depending of media.
