--- a/src/sass/features/collections/_block.scss
+++ b/src/sass/features/collections/_block.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of `i-block` for collections, ...
+* For default theme. Here is the style definition of `block` for collections, ...
 __________________________________________________________________________________*/
 
 
-.i-block {
+.block {
 
     margin: 1.5em 0.3em ;
     padding: $block-tb-padding $block-lr-padding ;
