--- a/src/sass/features/collections/_collection.scss
+++ b/src/sass/features/collections/_collection.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of `collection` for `i-block` collections, ...
+* For default theme. Here is the style definition of `collection` for `block` collections, ...
 _____________________________________________________________________________________________*/
 
 
-.i-collection { //with few structure tags.
+.collection { //with few structure tags.
 
     >h1, >h2, >h3, >h4, >h5, >h6 {
 
@@ -81,7 +81,7 @@ ________________________________________________________________________________
     }
 }
 
-ul.i-collection {
+ul.collection {
 
     >h1, >h2, >h3, >h4, >h5, >h6 {
 
