--- a/src/sass/features/forms/_form.scss
+++ b/src/sass/features/forms/_form.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of "i-form" for forms.
+* For default theme. Here is the style definition of "look-form" for forms.
 _______________________________________________________________________*/
 
 
-.i-form {
+form.look-form {
 
     label {
 
