--- a/src/sass/features/navbars/_bg_look.scss
+++ b/src/sass/features/navbars/_bg_look.scss
@@ -4,7 +4,7 @@ ________________________________________________________________________________
 
 
 
-.i-nav.look-bg { //background look for selection
+.navbar.look-bg { //background look for selection
 
     >ul li {
 
