--- a/src/sass/features/navbars/_mi_style.scss
+++ b/src/sass/features/navbars/_mi_style.scss
@@ -3,7 +3,7 @@
 _____________________________________________________________________________________________*/
 
 
-.i-nav.mi-style { //Wink: from a homework website menubar style for tutorial (maths and computer science)
+.navbar.mi-style { //Wink: from a homework website menubar style for tutorial (maths and computer science)
 
     >ul >li {
 
