--- a/src/sass/features/navbars/_navbar.scss
+++ b/src/sass/features/navbars/_navbar.scss
@@ -3,7 +3,7 @@
 __________________________________________________________________*/
 
 
-.i-nav { //use for navbar declaration.
+.navbar { //use for navbar declaration.
 
     @include global-bg-look() ;
 
