--- a/src/sass/iui.scss
+++ b/src/sass/iui.scss
@@ -31,6 +31,8 @@
 
 @import 'features/grids.scss' ;
 
+@import 'features/ships/badge.scss' ;
+
 @import 'features/extras/shadow_styles.scss' ;
 @import 'features/extras/radius_styles.scss' ;
 
