look for form indication

--- a/src/sass/iui.scss
+++ b/src/sass/iui.scss
@@ -22,7 +22,7 @@
 @import 'features/navbars/bg_look.scss' ;
 @import 'features/navbars/border_look.scss' ;
 
-@import 'features/forms/form.scss' ;
+@import 'features/forms/form_look.scss' ;
 @import 'features/forms/mi_style.scss' ;
 
 @import 'features/collections/block.scss' ;
