--- a/src/sass/features/navbars/_navbar.scss
+++ b/src/sass/features/navbars/_navbar.scss
@@ -5,7 +5,7 @@ __________________________________________________________________*/
 
 .navbar { //use for navbar declaration.
 
-    @include global-bg-look() ;
+    @include global-bg-look( $navbar-colors) ;
 
     padding: 0em 0.1em ;
     border-bottom: 1px solid $border-color ;
@@ -29,7 +29,7 @@ __________________________________________________________________*/
 
             &, a {
 
-                @include global-bg-look("transparent") ;
+                @include global-bg-look( ('bgcolor': "transparent", 'color': $default-txt-color)) ;
             }
 
             a {
@@ -55,7 +55,7 @@ __________________________________________________________________*/
 
             ul { //sub-item's menu container
 
-                @include global-bg-look() ;
+                @include global-bg-look( $navbar-colors) ;
 
                 position: absolute ;
                 top: $navbar-dsm-position ;
@@ -123,7 +123,7 @@ __________________________________________________________________*/
 
             &.unfocusable, &:hover.unfocusable, &:focus.unfocusable {
 
-                @include global-bg-look("transparent", darken( $light-color, 45%) ) ;
+                @include global-bg-look( ('bgcolor': "transparent", 'color': darken( $disable-color, 30%) )) ;
             }
         }
     }  
