--- a/src/sass/features/collections/_block.scss
+++ b/src/sass/features/collections/_block.scss
@@ -9,4 +9,6 @@ ________________________________________________________________________________
     padding: $block-tb-padding $block-lr-padding ;
     box-shadow: 0px 0px 5px lighten( $shadow-color, 10%) ;
     display: block ;
+    
+    @include global-bg-look() ;
 }
