--- a/src/sass/features/forms/_form_look.scss
+++ b/src/sass/features/forms/_form_look.scss
@@ -11,7 +11,7 @@ form.look-form {
 
         span:first-of-type {
 
-            border: 1px solid $border-color ;
+            border: 1px solid lighten( $border-color, 35%) ;
             padding: 0.3em ;
             margin-left: 0.1em ;
         }
