--- a/src/sass/features/forms/_mi_style.scss
+++ b/src/sass/features/forms/_mi_style.scss
@@ -11,6 +11,8 @@ form.mi-style { //wink: from "paymo project" form design
     width: 50% ;
     margin: auto ;
     border-radius: 25px ;
+    
+    @include global-bg-look() ;
 
     label {
 
