--- a/src/sass/features/navbars/_mi_bar.scss
+++ b/src/sass/features/navbars/_mi_bar.scss
@@ -1,9 +1,9 @@
 /*
-* For default theme. Here is the style definition of "mbar" from umiproject's website navbar.
+* For default theme. Here is the style definition of "mi-bar" from umiproject's website navbar.
 ______________________________________________________________________________________________*/
 
 
-.navbar.mbar { //From first umiproject's website menubar style
+.navbar.mi-bar { //From first umiproject's website menubar style
 
     box-shadow: 0px 4px 5px $shadow-color ;
     border: none ;
