--- a/src/sass/iui.scss
+++ b/src/sass/iui.scss
@@ -1,9 +1,9 @@
 @import 'settings.scss' ;
 
  //* add custom settings here; for example:
- //*decide what navbar aspect can be included by setting:
+ //*decide what navbar aspect can be included by setting (add/remove options):
  // $navbar-border-aspect: ('look-b', 'look-bt', 'look-bb', 'look-bl', 'look-br') ;
- //*decide what extras styles can be included by setting:
+ //*decide what extras styles can be included by setting (add/remove options):
  // $shadow-styles: ('s-sha', 's-sha-t', 's-sha-b', 's-sha-l', 's-sha-r') ;
  // $radius-styles: ('s-rad', 's-rad-l', 's-rad-ld', 's-rad-r', 's-rad-rd') ;
  //* . . .
@@ -32,6 +32,7 @@
 @import 'features/grids.scss' ;
 
 @import 'features/ships/badge.scss' ;
+@import 'features/ships/navcrumb.scss' ;
 
 @import 'features/extras/shadow_styles.scss' ;
 @import 'features/extras/radius_styles.scss' ;
