new feature: `.tag` for tag, contact, sticker ...

--- a/src/sass/iui.scss
+++ b/src/sass/iui.scss
@@ -33,6 +33,7 @@
 
 @import 'features/ships/badge.scss' ;
 @import 'features/ships/navcrumb.scss' ;
+@import 'features/ships/tag.scss' ;
 
 @import 'features/extras/shadow_styles.scss' ;
 @import 'features/extras/radius_styles.scss' ;
