--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -264,6 +264,12 @@ $crumb-font-size: 0.9em !default;
 $crumb-max-width: 200px !default;
 $crumb-separator: "/" !default;
 
+$tag-colors: ('bgcolor': darken( $light-color, 15%), 'color': $default-txt-color) !default;
+$tag-h-colors: ('bgcolor': $hover-color, 'color': $select-txt-color) !default; //colors when hover
+
+$tag-padding-lr: 12px !default; //padding-left-right
+$tag-height: 32px !default;
+
 //7.----------------------------
 //For some other extras properties
 
