adjust first child's top margin space in `.block`
> just arrived to "UDM baganté" happy to check this from there :)

--- a/src/sass/features/collections/_block.scss
+++ b/src/sass/features/collections/_block.scss
@@ -11,4 +11,9 @@ ________________________________________________________________________________
     display: block ;
     
     @include global-bg-look() ;
+    
+    &>*:first-child {
+
+        margin-top: 0px ;
+    }
 }
